# ProfiliTable

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
main/: ProfiliTable.py  config.yaml
table_agent/: cli.py
table_agent/agentroles/: __init__.py
table_agent/agentroles/cores/: __init__.py  base_agent.py  configs.py  registry.py  strategies.py
table_agent/agentroles/tableProcessing_agents/: debugger.py  decompositer.py  decomposition_codes.py  generator.py  intent_understanding.py  profiling.py  summarizer.py
table_agent/graphbuilder/: graph_builder.py  message_history.py
table_agent/llm_callers/: base.py  image.py  text.py
table_agent/parsers/: __init__.py  parsers.py
table_agent/promptstemplates/: prompt_template.py
table_agent/promptstemplates/resources/: pt_table_agent_repo.py
table_agent/states/: base_state.py  tableState.py
table_agent/storage/: storage_service.py
table_agent/toolkits/: tool_manager.py
table_agent/toolkits/basetool/: file_tools.py
table_agent/utils/: constants.py  data_profiling.py  logger.py  logger_test.py  node_helpers.py  refactor_constants.py  utils.py
table_agent/workflow/: __init__.py  registry.py  wf_tableProcessing_workflow.py
